fix: move ad units to bottom of page to prevent unpredictable white space

--- a/app/dashboard/dashboard.module.css
+++ b/app/dashboard/dashboard.module.css
@@ -133,7 +133,7 @@
 .main {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 2.5rem;
+    padding: 1rem 2.5rem 2.5rem;
     display: grid;
     grid-template-columns: 1fr 300px;
     gap: 2rem;
